<resources>
    <string name="app_name">Gerenciador de D&#38;D</string>
    <string name="vazio">  </string>
    <string name="auth_failed">Falha na Autenticação</string>
    <string name="hint_email">Insira seu email</string>
    <string name="hint_password">Insira sua senha</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Crie sua conta</string>
    <string name="title_activity_segunda">SegundaActivity</string>
    <string name="desconect">Desconectado</string>
    <string name="nomepers">Nome: </string>
    <string name="personagem">Personagem </string>
    <string name="classe">Classe: </string>
    <string name="raca">Raça: </string>
    <string name="subraca">Sub-raça: </string>
    <string name="antecedente">Antecedente: </string>
    <string name="tendencia">Tendência: </string>
    <string name="nivel">Nível: </string>
    <string name="pv">PV: </string>
    <string name="iniciativa">Iniciativa: </string>
    <string name="atributos">Atributos </string>
    <string name="forca">Força: </string>
    <string name="destreza">Destreza: </string>
    <string name="constituicao">Constituição: </string>
    <string name="inteligencia">Inteligência: </string>
    <string name="sabedoria">Sabedoria: </string>
    <string name="carisma">Carisma: </string>
    <string name="usuario">Informações do novo usuário </string>
    <string name="nomeuser">Nome: </string>
    <string name="emailuser">Email: </string>
    <string name="senhauser">Senha: </string>
    <string name="gravar">Gravar</string>
    <string name="emailforgot">Esqueceu a sua senha?</string>
    <string name="criarpers">Criar novo personagem</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="gravadoSucesso">Gravado</string>
    <string name="desloc">Desloc.:</string>
    <string name="classeArmad">C. Armad.:</string>
    <string name="jogador">Jogador:</string>
    <string name="xp">X.P.:</string>
    <string name="pv_total">P.V. Total:</string>
    <string name="pv_atual">P.V. Atual:</string>
    <string name="pv_temp">P.V. Temp.:</string>
    <string name="barra">|</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="teste_resistencia">Teste de Resistência</string>
    <string name="resForca">Força</string>
    <string name="espaco" />
    <string name="resDestreza">Destreza</string>
    <string name="resConstituicao">Constituição</string>
    <string name="resInteligencia">Inteligência</string>
    <string name="resSabedoria">Sabedoria</string>
    <string name="resCarisma">Carisma</string>
    <string name="pericia">Perícias</string>
    <string name="acrobacia">Acrobacia(Des)</string>
    <string name="arcanismo">Arcanismo(Int)</string>
    <string name="atletismo">Atletismo(For)</string>
    <string name="atuacao">Atuação(Car)</string>
    <string name="blefar">Blefar(Car)</string>
    <string name="furtividade">Furtividade(Des)</string>
    <string name="historia">História(Int)</string>
    <string name="intimidacao">Intimidação (Car)</string>
    <string name="intuicao">Intuição(Sab)</string>
    <string name="investigacao">Investigação(Int)</string>
    <string name="lidarAnimais">Lidar Animais(Sab)</string>
    <string name="medicina">Medicina(Sab)</string>
    <string name="natureza">Natureza(Int)</string>
    <string name="percepcao">Percepção(Sab)</string>
    <string name="predestinacao">Predestinação(Des)</string>
    <string name="religiao">Religião(Int)</string>
    <string name="sobrevivencia">Sobrevivência(Sab)</string>
    <string name="persuasao">Persuasão(Car)</string>
    <string name="criarAven">Criar nova aventura</string>
    <string name="associarAvent">Associar aventura</string>
    <string name="procuraAven">Procurar aventura</string>
    <string name="listaAventuraMestre">Lista de Aventuras</string>
    <string name="nomeavent">Nome:</string>
    <string name="descricaoAventura">Descriçao Aventura:</string>
    <string name="numavent">Nº:</string>
    <string name="numaventtext">99999999</string>
    <string name="NumeroJogadorAvent">Número Aventura:</string>
    <string name="aventuraMestre">Cria Aventura</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="facebook_app_id">225630851303526</string>
    <string name="fb_login_protocol_scheme">fb225630851303526</string>

</resources>
