<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.personagem.PersonagemFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="top">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/associa_aven_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/associarAvent"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <TextView
                android:id="@+id/text_numjogadoraventtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NumeroJogadorAvent" />

            <EditText
                android:id="@+id/field_numjogadoraventtext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_listaAventuraMestre"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:text="@string/listaAventuraMestre"
              android:textStyle="bold" />

              <ListView
                  android:id="@+id/listaPersonagemAventura"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"></ListView>

          </LinearLayout>

    </LinearLayout>

</FrameLayout>
